Initializer tested